--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Build and pull docker files for unit tests
         env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
           OPENDISTRO_VERSION: "1.13.2"
           LOGSTASH_VERSION: "7.13.2"
         run: |
@@ -26,6 +27,11 @@ jobs:
       - name: Run unit tests
         run: |
           ./scripts/unit-test/docker-run.sh
+
+      - name: Upload SQL Coverage Report
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Build and pull docker files for OpenDistro
         env:
